fix: second layout bug

--- a/app/(Home)/Information.module.scss
+++ b/app/(Home)/Information.module.scss
@@ -1,5 +1,9 @@
+
+
 .information {
   padding: 48px;
+  background-color: rgba(255, 255, 255, 0.47);
+  height: 100%;
 }
 
 .sig {
