--- a/app/post/(Post)/Thread.module.scss
+++ b/app/post/(Post)/Thread.module.scss
@@ -38,7 +38,8 @@
 }
 
 .info {
-  max-height: 65dvh;
+  background: rgba(255, 255, 255, 0.47);
+  height: 100%;
   padding: 30px;
   display: flex;
   flex-direction: column;
